# context-squeeze

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/cx-cli/: Cargo.toml
crates/cx-cli/src/: main.rs
crates/cx-cli/tests/: cli.rs
crates/cx-cli/tests/fixtures/: sample.rs
crates/cx-core/: Cargo.toml
crates/cx-core/benches/: engine.rs
crates/cx-core/src/: error.rs  lib.rs  logs.rs  skeleton.rs  squeeze.rs  tokenizer.rs
crates/cx-core/src/ast/: language.rs  mod.rs
crates/cx-core/tests/: skeleton.rs
crates/cx-core/tests/fixtures/sample_project/: README.md  app.py  geometry.rs  util.go  widget.ts
crates/cx-core/tests/snapshots/: skeleton__sample_project_skeleton.snap
crates/cx-mcp/: Cargo.toml
crates/cx-mcp/src/: main.rs
docs/: ARCHITECTURE.md  PROJECT.md  ROADMAP.md  USAGE.md
examples/: README.md  orders.py
