[package]
name = "cx-cli"
description = "Developer CLI for Context Squeeze — run skeleton, squeeze, and log-summarize operations from the terminal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "cx"
path = "src/main.rs"

[dependencies]
cx-core.workspace = true
clap.workspace = true
anyhow.workspace = true

[lints]
workspace = true
